refactor tgetopt.c out of mdump, mpong, msend

--- a/msvc/mdump/mdump.vs2010.vcxproj
+++ b/msvc/mdump/mdump.vs2010.vcxproj
@@ -14,6 +14,7 @@
     <ClInclude Include="..\..\mtools.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\tgetopt.c" />
     <ClCompile Include="..\..\mdump.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
