--- a/msvc/mdump/mdump.vs2010.vcxproj.filters
+++ b/msvc/mdump/mdump.vs2010.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="..\..\mdump.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\tgetopt.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
