--- a/msvc/mdump/mdump.vs2010.vcxproj.filters
+++ b/msvc/mdump/mdump.vs2010.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="..\..\tgetopt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\udp.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
